# dvidmsg-thrift

./: CMakeLists.txt  README  dvidmsg.thrift  gen_cpp.bash  gen_py.bash
cpp/: CMakeLists.txt  serialization_benchmark.cpp
dvidmsg/: DvidMsgTestClient.py  ServeBenchmark.py  ServeHdf5.py  conversions.py  dvidmsg.thrift  serialization_benchmark.py
py/: serialization_benchmark.py  thrift_conversions.py
py/experimental/: echo_benchmark.py
